--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,7 @@
 {
   "name": "frontend",
   "version": "0.1.0",
+  "homepage": "https://sylviall81.github.io/fsd-portfolio/frontend",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
